prepare for section 2